OP basico implementado

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Lovelace Gitionario</title>
         <meta property="og:title" content="Lovelace Gitionario" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-        <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+        <meta property="og:url" content="https://luisgustavoczp.github.io/LovelaceApp/" />
+        <meta property="og:image" content="https://luisgustavoczp.github.io/LovelaceApp/Images/lovelacelogo.jpeg" />
         <style>
             body {background-color: black;}
             main {background-color:darkgrey; padding: 5px; display: flex; justify-content:center; }
