--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         var client = new XMLHttpRequest();
         client.onload = handler;
-        client.open("GET", "HardSkills/index.html");
+        client.open("GET", "pages/hardskills/index.html");
         client.send();
 
         //ReadXML("textos/texto2.xml");
