--- a/Pages/HardSkills/index.html
+++ b/Pages/HardSkills/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>HardSkills</title>
     </head>
     <body>
-        
+        <section>
+            <h3>HardSkills</h3>
+            <p>São habilidades técnicas, voltadas a forma de manipular a tecnologia.</p>
+        </section>
     </body>
 </html>
