--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         function processDocData(doc) 
         {
-            var elements = doc.getElementById("body");
+            var elements = doc.body;
             console.log(elements.childElementCount.toString());
 
             for(i = 0; i < elements.childElementCount; i++)
