separando codigo de html

--- a/index.html
+++ b/index.html
@@ -42,52 +42,8 @@
         </main>
         
     </body>
-    <script>
+    <script src="docrequest.js">
         var informacoes = document.getElementById("informacoes");
-
-        function processElement (element, parent)
-        {
-            var newTag = document.createElement(element.tagName);
-            newTag.innerText = element.innerText;
-            parent.appendChild(newTag);
-
-            for(j = 0; j < element.childElementCount; j++)
-            {
-                processElement (element.children[j], newTag);
-            }
-        }
-
-        function processDocData(doc) 
-        {
-            var elements = doc.body;
-            console.log(elements.childElementCount.toString());
-
-            for(i = 0; i < elements.childElementCount; i++)
-            {
-                parent.appendChild(elements.children[i]);
-                //processElement (elements[i], informacoes);
-            }
-        }
-
-        function handler() 
-        {
-            if(this.status == 200 && this.response != null) 
-            {
-                // success!
-                processDocData(this.response);
-            } 
-            else
-            {
-                
-            }
-        }
-
-        var client = new XMLHttpRequest();
-        client.onload = handler;
-        client.open("GET", "Pages/HardSkills/index.html");
-        client.send();
-
-        //ReadXML("textos/texto2.xml");
-        //outputs.innerText += LoadFile("textos/texto2.xml");
+        ReadDoc("Pages/HardSkills/index.html");
     </script>
 </html>
