--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     </body>
     <script src="docrequest.js">
         var informacoes = document.getElementById("informacoes");
-        ReadDoc("Pages/HardSkills/index.html");
+        readDoc("Pages/HardSkills/index.html");
     </script>
 </html>
