--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="Lovelace Gitionario" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://luisgustavoczp.github.io/LovelaceApp/" />
-        <meta property="og:image" content="https://luisgustavoczp.github.io/LovelaceApp/Images/lovelacelogo.jpeg" />
+        <meta property="og:image" content="https://luisgustavoczp.github.io/LovelaceApp/images/lovelacelogo.jpeg" />
         <style>
             body {background-color: cadetblue;}
             header {background-color:darkcyan; color:white; text-align: center; padding: 5px; display: flex; justify-content:center; flex-direction:column }
@@ -33,9 +33,9 @@
         </nav>
         <header>
             <div class="titulo">
-                <img src="Images/lovelacelogo.png" height="100px" />
+                <img src="images/lovelacelogo.png" height="100px" />
                 <h1><span class="love">Love</span><span class="lace">lace</span>: Gitionário</h1>
-                <img src="Images/logo-alpha-edtech.png" height="100px" />
+                <img src="images/logo-alpha-edtech.png" height="100px" />
             </div>
             <h4>Repositorio de informações para turma Lovelace da AlphaEdTech.</h4>
         </header>
@@ -49,7 +49,7 @@
                 </ol>
             </aside>
             <article class="informacoes">
-                <iframe class="subpage" id="subpage" src="Pages/trilhas.html"></iframe>
+                <iframe class="subpage" id="subpage" src="pages/trilhas.html"></iframe>
             </article>
         </main>
         
@@ -58,15 +58,15 @@
         var subPage = document.getElementById("subpage");
         function onTrilhas ()
         {
-            subPage.setAttribute("src", "Pages/trilhas.html");
+            subPage.setAttribute("src", "pages/trilhas.html");
         }
         function onHardSkills ()
         {
-            subPage.setAttribute("src", "Pages/HardSkills/index.html");
+            subPage.setAttribute("src", "pages/hardskills/index.html");
         }
         function onSoftSkills ()
         {
-            subPage.setAttribute("src", "Pages/SoftSkills/index.html");
+            subPage.setAttribute("src", "pages/softskills/index.html");
         }
     </script>
 </html>
