--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="Lovelace Gitionario" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://luisgustavoczp.github.io/LovelaceApp/" />
-        <meta property="og:image" content="https://luisgustavoczp.github.io/LovelaceApp/images/lovelacelogo.jpeg" />
+        <meta property="og:image" content="https://luisgustavoczp.github.io/LovelaceApp/images/lovelacelogo.png" />
         <style>
             body {background-color: cadetblue;}
             header {background-color:darkcyan; color:white; text-align: center; padding: 5px; display: flex; justify-content:center; flex-direction:column }
