--- a/pages/hardskills/index.html
+++ b/pages/hardskills/index.html
@@ -2,8 +2,14 @@
 <html>
     <head>
         <title>HardSkills</title>
+        <style>
+            header {background-color: pink; border: 1px; align-items: center; text-align: center;}
+        </style>
     </head>
     <body>
+        <header>
+            <a href="../trilhas.html" target="subpage">Trilhas</a>
+        </header>
         <section>
             <h3>HardSkills</h3>
             <p>São habilidades técnicas, voltadas a forma de manipular a tecnologia.</p>
