--- a/pages/softskills/index.html
+++ b/pages/softskills/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <title>SoftSkills</title>
+        <style>
+            header {background-color: pink; border: 1px; align-items: center; text-align: center;}
+        </style>
     </head>
     <body>
+        <header>
+            <a href="../trilhas.html" target="subpage">Trilhas</a>
+        </header>
+        
         <section>
             <h3>SoftSkills</h3>
             <p>São habilidades técnicas, voltadas a forma de manipular a tecnologia.</p>
