--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             body {background-color: cadetblue;}
             header {background-color:darkcyan; color:white; text-align: center; padding: 5px; display: flex; justify-content:center; flex-direction:column }
             .submenuopcoes { display: flex; justify-content:right; }
-            .subpagemenu {background-color: darkslateblue; padding:5px; flex-shrink: 1; display: flex; justify-content:start; flex-direction:column}
+            .subpagemenu {background-color: darkcyan; padding:5px; flex-shrink: 1; display: flex; justify-content:start; flex-direction:column}
             .subpage {flex-grow: 1;}
             main {display: flex; flex-direction:row }
             h1 {padding: 5px;}
@@ -41,15 +41,15 @@
         </header>
         <main>
             <aside class="subpagemenu">
-                <h4 style="background-color: blueviolet; margin: 0px;">Indice</h4>
-                <ol style="background-color:cornflowerblue; margin: 0px; padding-left: 20px;">
-                    <li><button onclick="onTrilhas()">Trilhas</button></li>
+                <h4 style="background-color: pink; margin: 0px;">Indice</h4>
+                <ol style="background-color:greenyellow; margin: 0px; padding-left: 20px;">
+                    <li><a href="pages/trilhas.html" target="subpage">Trilhas</a></li>
                     <li><button onclick="onHardSkills()">HardSkills</button></li>
                     <li><button onclick="onSoftSkills()">SoftSkills</button></li>
                 </ol>
             </aside>
             <article class="informacoes">
-                <iframe class="subpage" id="subpage" src="pages/trilhas.html"></iframe>
+                <iframe name="subpage" class="subpage" id="subpage" src="pages/trilhas.html"></iframe>
             </article>
         </main>
         
