--- a/pages/trilhas.html
+++ b/pages/trilhas.html
@@ -1,5 +1,22 @@
-<h3>Trilhas</h3>
-<ol>
-    <li>HardSkills</li>
-    <li>SoftSkills</li>
-</ol>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Trilhas</title>
+        <style>
+            body {display:flex; flex-direction:column;}
+            tr {text-align:center;}
+            h3 {text-align:center;}
+            table {background-color:darkgray;}
+            td {background-color: pink; border: 1px;}
+        </style>
+    </head>
+    <body>
+        <h3>Trilhas</h3>
+        <table>
+            <tr>
+                <td><a href="./hardskills/index.html" target="subpage">HardSkills</a></li>
+                <td><a href="./softskills/index.html" target="subpage">SoftSkills</a></li>
+            </tr>
+        </table>
+    </body>
+</html>
