criado palheta de css padrao e melhorado o design

--- a/pages/hardskills/index.html
+++ b/pages/hardskills/index.html
@@ -3,16 +3,39 @@
     <head>
         <title>HardSkills</title>
         <style>
-            header {background-color: pink; border: 1px; align-items: center; text-align: center;}
         </style>
+        <link rel="stylesheet" href="../../pattern.css">
     </head>
     <body>
-        <header>
-            <a href="../trilhas.html" target="subpage">Trilhas</a>
+        <header class="mainheader">
+            <a class="linkbutton" href="../trilhas.html" target="subpage">Trilhas</a>
         </header>
         <section>
-            <h3>HardSkills</h3>
-            <p>São habilidades técnicas, voltadas a forma de manipular a tecnologia.</p>
+            <header class="subheader">
+                <h3 class="love">HardSkills</h3>
+                <p>São habilidades técnicas, voltadas a forma de manipular a tecnologia.</p>    
+                <h5 class="citacao">"Pra não sair falando besteira por aí né."</h5>
+                <h6 class="autor">TANIGUCHI, Kenji (2021)</h6>
+            </header>
+            <div>
+                <h4>Introdução a Web</h4>
+                <ol>
+                    <li>TCP, UDP, ICMP, Ping, Tracerout/Tracert</li>
+                    <li>IP(v4|v6), NAT e WHOIS</li>
+                    <li>DNS e Registro de Domínio .br</li>
+                    <li>Arquitetura XML e JSON</li>
+                </ol>
+                <h4>GitHub</h4>
+                <ol>
+                    <li>Introdução ao Git</li>
+                    <li>Controle de versão</li>
+                </ol>
+                <h4>Front-End</h4>
+                <ol>
+                    <li>Introdução</li>
+                    <li>Linguagem de notação HTML</li>
+                </ol>
+            </div>
         </section>
     </body>
 </html>
