--- a/pages/hardskills/index.html
+++ b/pages/hardskills/index.html
@@ -3,28 +3,28 @@
     <head>
         <title>HardSkills</title>
         <style>
+            
         </style>
         <link rel="stylesheet" href="../../pattern.css">
     </head>
     <body>
-        <header class="mainheader">
+        <header class="subpageMenu">
             <a class="linkbutton" href="../trilhas.html" target="subpage">Trilhas</a>
         </header>
         <section>
             <header class="subheader">
-                <h3 class="love">HardSkills</h3>
+                <h1 class="lace">HardSkills</h1>
                 <p>São habilidades técnicas, voltadas a forma de manipular a tecnologia.</p>    
                 <h5 class="citacao">"Pra não sair falando besteira por aí né."</h5>
-                <h6 class="autor">TANIGUCHI, Kenji (2021)</h6>
+                <a href="" target="_blank"><h6 class="autor">TANIGUCHI, Kenji (2021)</h6></a>
             </header>
             <div>
-                <h4>Introdução a Web</h4>
-                <ol>
-                    <li>TCP, UDP, ICMP, Ping, Tracerout/Tracert</li>
-                    <li>IP(v4|v6), NAT e WHOIS</li>
-                    <li>DNS e Registro de Domínio .br</li>
-                    <li>Arquitetura XML e JSON</li>
-                </ol>
+                <nav class="subpageMenu">
+                    <a class="linkbutton quad" href="introducaoaweb/index.html" target="subpage">Introdução a Web</a>
+                    <a class="linkbutton quad" href="" target="subpage">GitHub</a>
+                    <a class="linkbutton quad" href="" target="subpage">Front-End</a>
+                </nav>
+                
                 <h4>GitHub</h4>
                 <ol>
                     <li>Introdução ao Git</li>
@@ -36,6 +36,9 @@
                     <li>Linguagem de notação HTML</li>
                 </ol>
             </div>
+            <script>
+
+            </script>
         </section>
     </body>
 </html>
