--- a/pages/trilhas.html
+++ b/pages/trilhas.html
@@ -15,8 +15,8 @@
             <h3 class="lace">Trilhas</h3>
         </header>
         <section class="lista">
-            <a class="linkbutton" name="gohardskills" href="./hardskills/index.html" target="subpage">HardSkills</a>
-            <a class="linkbutton" name="gosoftskills" href="./softskills/index.html" target="subpage">SoftSkills</a>
+            <a class="linkbutton quad" name="gohardskills" href="./hardskills/index.html" target="subpage">HardSkills</a>
+            <a class="linkbutton quad" name="gosoftskills" href="./softskills/index.html" target="subpage">SoftSkills</a>
         </section>
     </body>
 </html>
