--- a/pages/hardskills/introducaoaweb/protocolos/index.html
+++ b/pages/hardskills/introducaoaweb/protocolos/index.html
@@ -20,10 +20,6 @@
                 <a href="" target="_blank"><h6 class="autor">Kyle, Michael (2005)</h6></a>
             </header>
             <div>
-                <aside class="subpageMenu" style="padding: 5px;">
-                    <img src="../../../../images/ArquiteturaInternet.png" height="250px" />
-                    <img src="../../../../images/EncapsulamentoProtocolos.png" height="250px" />
-                </aside>
                 <nav class="subpageMenu" style="flex-direction: column; text-align: center; padding: 5px; flex-wrap: wrap;">
                     <section>
                         <h2 class="titulo sub" style="flex-grow: 1;">Camada de Aplicação</h2>
@@ -84,6 +80,10 @@
                         </div>
                     </section>
                 </nav>
+                <aside class="subpageMenu" style="padding: 5px;">
+                    <img src="/images/ArquiteturaInternet.png" height="250px" />
+                    <img src="/images/EncapsulamentoProtocolos.png" height="250px" />
+                </aside>
             </div>
             <script>
 
