--- a/trilhas/hardskills/index.html
+++ b/trilhas/hardskills/index.html
@@ -2,23 +2,15 @@
 <html>
     <head>
         <title>HardSkills</title>
+        <meta name="description" content="São habilidades técnicas, voltadas a forma de manipular a tecnologia." />
+        <meta name="autor" content="'Pra não sair falando besteira por aí né.' - TANIGUCHI, Kenji (2021)" />
         <style>
             
         </style>
-        <link rel="stylesheet" href="../../pattern.css">
+        <link rel="stylesheet" href="../../pattern.css" />
     </head>
     <body>
-        <header class="subpageMenu">
-            <a class="linkbutton" href="../trilhas.html" target="subpage">Trilhas</a>
-        </header>
         <section>
-            <header class="subheader">
-                <h1 class="lace">HardSkills</h1>
-                <p>São habilidades técnicas, voltadas a forma de manipular a tecnologia.</p>    
-                <h5 class="citacao">"Pra não sair falando besteira por aí né."</h5>
-                <a href="" target="_blank"><h6 class="autor">TANIGUCHI, Kenji (2021)</h6></a>
-            </header>
-            <div>
                 <nav class="subpageMenu">
                     <a class="linkbutton quad" href="introducaoaweb/index.html" target="subpage">Introdução a Web</a>
                     <a class="linkbutton quad" href="" target="subpage">GitHub</a>
@@ -35,10 +27,6 @@
                     <li>Introdução</li>
                     <li>Linguagem de notação HTML</li>
                 </ol>
-            </div>
-            <script>
-
-            </script>
         </section>
     </body>
 </html>
