--- a/trilhas/index.html
+++ b/trilhas/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Trilhas</title>
+        <meta name="description" content="Todas as habilidades são necessárias para uma melhora profissional." />
+        <meta name="autor" content="'Educação não transforma o mundo. Educação muda pessoas. Pessoas transformam o mundo.' - Freire, Paulo (2021)" />
         <style>
             body {display:flex; flex-direction:column;}
             tr {text-align:center;}
@@ -11,9 +13,6 @@
         <link rel="stylesheet" href="./../pattern.css">
     </head>
     <body>
-        <header class="mainheader">
-            <h3 class="lace">Trilhas</h3>
-        </header>
         <section class="lista">
             <a class="linkbutton quad" name="gohardskills" href="./hardskills/index.html" target="subpage">HardSkills</a>
             <a class="linkbutton quad" name="gosoftskills" href="./softskills/index.html" target="subpage">SoftSkills</a>
