--- a/trilhas/index.html
+++ b/trilhas/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Trilhas</title>
         <meta name="description" content="Todas as habilidades são necessárias para uma melhora profissional." />
-        <meta name="autor" content="'Educação não transforma o mundo. Educação muda pessoas. Pessoas transformam o mundo.' - Freire, Paulo (2021)" />
+        <meta name="autor" content="'Educação não transforma o mundo. Educação muda pessoas. Pessoas transformam o mundo.' - Freire, Paulo" />
         <style>
             body {display:flex; flex-direction:column;}
             tr {text-align:center;}
